# hap-bootloader

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Host/: MicroBoot
Host/Source/MicroBoot/: MicroBoot.lps
Host/Source/MicroBoot/lib/x86_64-linux/: MicroBoot.compiled  MicroBoot.or  configgroups.ppu  currentconfig.ppu  customutil.ppu  filelogger.ppu  firmwareupdate.ppu  mainunit.ppu  miscellaneousdialog.ppu  openblt.ppu  sessionxcpdialog.ppu  settingsdialog.ppu  stopwatch.ppu  transportxcpcandialog.ppu  transportxcprs232dialog.ppu  transportxcptcpipdialog.ppu  transportxcpusbdialog.ppu
patches/: 001-can_interface_initialize_variables.patch  002-add_bootloader_version_date.patch  003-main_console_support.patch  004-add_stm32f1_console_support.patch  005-add_custom_can_msg_id.patch  006-add_bootloader_state_hook.patch  007-custom_xcp_status_command.patch  008-add_xcp_boot_cmd.patch  009-disable_can_mailbox_assert.patch  010-update_bootloader_version.patch  011-add_automatic_wakeup_bus_off_recovery.patch  012-add_can_inactive_timer_notification.patch
src/: blt_conf.h  flash_layout.c  main.c  protodef.h  stm32f103rb_flash.ld
